fix second section mobile

--- a/inc/assets/css/responsive.css
+++ b/inc/assets/css/responsive.css
@@ -646,15 +646,15 @@
   .three-featured-articles-block-container .acticle-container .hover-cat {
     top: -17%;
   }
-  .three-featured-articles-block-container .acticle-container .hover-cat.hover-cat-bottom {
-    top: 102% !important;
-  }
   .three-featured-articles-block-container .article-container.hovered {
     filter: blur(0px);
     scale: 1.9;
   }
   .three-featured-articles-block-container .article-container.hovered img {
     transform: scale(1);
+  }
+  .three-featured-articles-block-container .article-container.hovered .hover-cat.hover-cat-bottom {
+    top: 102% !important;
   }
 }
 @media (max-width: 470px) {
